refactor: Refactor test cases from TestSourceType to TestRun